--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "localstorage": "^1.0.1",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
