--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.10.5",
     "@reach/router": "^1.3.4",
+    "@react-google-maps/api": "^1.9.9",
     "@syncfusion/ej2-react-schedule": "^18.2.47",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-event-calendar": "^0.3.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "use-places-autocomplete": "^1.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
