--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reach/combobox": "^0.10.5",
+    "@react-google-maps/api": "^1.9.9",
+    "@testing-library/jest-dom": "github:testing-library/jest-dom",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.1.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.26"
+    "mongoose": "^5.9.26",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "use-places-autocomplete": "^1.3.10"
   }
 }
